--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>do roboty!</title>
 </head>
 <h1>Kolejne zesrane tu-sru app :)</h1>
+    <p>Janusz Zalejski strongly contributed to this project :D </p>
 <div id="container">
     <input type="text" id="input" placeholder="dodaj zadanie do wykonania">
  <div id="przyciski">
