--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>do roboty!</title>
 </head>
 <h1>Kolejne zesrane tu-sru app :)</h1>
-    <p>Janusz Zalejski strongly contributed to this project :D </p>
+    <h1><a href="https://www.facebook.com/janusz.zalejski">Janusz Zalejski strongly contributed to this project :D </a></h1>
 <div id="container">
     <input type="text" id="input" placeholder="dodaj zadanie do wykonania">
  <div id="przyciski">
