--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="text" id="input" placeholder="dodaj zadanie do wykonania">
  <div id="przyciski">
     <button id="dodaj">dodaj zadanie</button>
-   <button id="usuń">wypierdol te bzdury</button>
+   <button id="usuń">usuń wszystkie</button>
    </div>
 
     </div>
